Fix margin collapsing issue

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,7 +2,8 @@ html, body, canvas {
   width: 100%; 
   height: 100%; 
   padding: 0; 
-  margin: 0; 
+  margin: 0;
+  overflow: auto; /* Fix margin collapsing on first child */
 }
 
 #sketches {
